# social-network-api

./: Dockerfile  README.md  config.toml  logconfig.ini  pyproject.toml
migrations/: __init__.py  env.py
migrations/versions/: __init__.py  adding_default_rules_b6199c179936.py  adding_rules_b6199c179936.py  admin_and_admin_rules_init_a33060aafc15.py  creating_admin_a33060aafc15.py  init_8af847b54434.py
src/auth_test_task/: main.py
src/auth_test_task/api/dependencies/: __init__.py  access.py  auth.py  objects.py
src/auth_test_task/api/routers/: auth.py  comment.py  post.py  role_rule.py  users.py
src/auth_test_task/db/: models.py
src/auth_test_task/db/dal/: comment.py  post.py  role_rule.py  user.py
src/auth_test_task/schemas/: __init__.py  _configuration.py  comment.py  post.py  role_rule.py  user.py
src/auth_test_task/utils/: __init__.py  access.py  auth.py
src/social_network_api/: __init__.py  main.py
src/social_network_api/api/: __init__.py
src/social_network_api/api/dependencies/: __init__.py  _common.py  access.py  auth.py  objects.py
src/social_network_api/api/routers/: __init__.py  auth.py  comment.py  post.py  role_rule.py  users.py
src/social_network_api/db/: __init__.py  connection.py  models.py
src/social_network_api/db/dal/: __init__.py  comment.py  post.py  role_rule.py  user.py
src/social_network_api/schemas/: __init__.py  _common.py  _configuration.py  _variables.py  auth.py  comment.py  post.py  role_rule.py  user.py
src/social_network_api/utils/: __init__.py  access.py  auth.py
